--- a/ImpFront/src/index.css
+++ b/ImpFront/src/index.css
@@ -1,21 +1,78 @@
+body{
+  font-family: 'Courier New', Courier, monospace;
+  margin:0px 20px 0px 20px
+}
 
-nav{
+/* .content {
+  background-color: rgb(17, 68, 68);
+  height: 1000px;
+} */
+
+.nav-content {
   display: flex;
   justify-content: center;
-  background-color: rgb(29, 143, 143);
-  color: white;
-  font-size: 50px;
+  align-items: center;
+  /* background-color: rgb(31, 53, 53); */
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  padding: 10px;
 }
 
 .logo {
-  margin-right: auto; /* Mueve la imagen hacia la izquierda */
+  margin-right: 20px;
 }
 
-.nav-list{
+.nav-list ul {
   display: flex;
-  justify-content: space-between;
-  width: 20%;
+  align-items: center;
   list-style: none;
+}
+
+.nav-list li {
+  margin-right: 70px;
+}
+
+.nav-list a {
+  color: rgb(29, 27, 27);
+  text-decoration: none;
+}
+
+button {
+  background-color: transparent;
+  border: 1px solid rgb(14, 13, 13);
+  border-radius: 50px;
+  color: rgb(10, 9, 9);
+  padding: 5px 10px;
+  margin-left: 50px;
   cursor: pointer;
-  
+  font-size: 20px;
+}
+
+button:hover {
+  background-color: rgb(206, 21, 21);
+  color: black;
+}
+
+.content-header{
+  /* background-color: aqua; */
+  height: 450px;
+  position: relative;
+  z-index: 1;
+}
+
+.imgBarco{
+  position: fixed;
+  top: 0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el contenedor */
+  background-position: center; /* Centra la imagen horizontal y verticalmente */
+  opacity: 0.7;
+  z-index: 0;
+}
+
+.content-section {
+  position: absolute; /* Asegura que los elementos hijos posicionados se ajusten al contenido */
+  z-index: 2; /* Asegura que el contenido esté por encima de la imagen de fondo */
 }
