--- a/ImpFront/src/index.css
+++ b/ImpFront/src/index.css
@@ -1,6 +1,6 @@
 body{
   font-family: 'Courier New', Courier, monospace;
-  margin:0px 20px 0px 20px
+   margin:0px 0px 0px 0px 
 }
 
 /* .content {
@@ -12,10 +12,11 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: rgb(31, 53, 53); */
-  color: rgb(0, 0, 0);
+  background-color: rgba(5, 10, 24, 0.623);
+  
   font-size: 20px;
-  padding: 10px;
+  /* padding: 10px; */
+  font-weight: 600;
 }
 
 .logo {
@@ -33,22 +34,27 @@ body{
 }
 
 .nav-list a {
-  color: rgb(29, 27, 27);
+  color: rgb(206, 192, 192);
   text-decoration: none;
 }
 
-button {
+.nav-list a:hover{
+  color: rgb(255, 255, 255);
+  text-decoration:underline;
+}
+
+.btn-login{
   background-color: transparent;
-  border: 1px solid rgb(14, 13, 13);
+  border: 1px solid rgb(206, 192, 192);
   border-radius: 50px;
-  color: rgb(10, 9, 9);
+  color: rgb(206, 192, 192);
   padding: 5px 10px;
   margin-left: 50px;
   cursor: pointer;
   font-size: 20px;
 }
 
-button:hover {
+.btn-login:hover {
   background-color: rgb(206, 21, 21);
   color: black;
 }
@@ -61,18 +67,68 @@ button:hover {
 }
 
 .imgBarco{
-  position: fixed;
+  position:absolute;
   top: 0;
   left:0;
   width: 100%;
-  height: 100%;
-  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el contenedor */
-  background-position: center; /* Centra la imagen horizontal y verticalmente */
-  opacity: 0.7;
+  height: 600px;
+  background-size: cover; 
+  background-position: center;
   z-index: 0;
+  overflow: hidden;
+  background-image: url('../src/assets/img/barcoCarga.jpg');
+  
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Color negro con opacidad del 50% */
+  z-index: 1; /* Asegura que el div overlay esté por encima del contenido */
 }
 
 .content-section {
-  position: absolute; /* Asegura que los elementos hijos posicionados se ajusten al contenido */
-  z-index: 2; /* Asegura que el contenido esté por encima de la imagen de fondo */
+  margin-left: 20px;
+  position: fixed; /* Asegura que los elementos hijos posicionados se ajusten al contenido */
+  z-index: 5; /* Asegura que el contenido esté por encima de la imagen de fondo */
+}
+
+.content-presentacion{
+  position: relative;
+  flex-direction: column;
+  top: 30%; 
+  left: 50%; 
+  transform: translate(-50%, -150%); /* Centra el componente */
+  z-index: 2;
+  display: flex;
+  color: rgb(255, 255, 255);;
+  align-items: center;
+
+}
+
+.content-presentacion .btn-presentacion{
+  background-color: rgb(147 14 14);
+  border-radius: 50px;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 20px;
+  text-decoration: none;
+
+  
+}
+
+.content-presentacion .btn-presentacion:hover{
+  background-color: rgb(223 19 19);
+}
+
+
+.content-presentacion .btn-presentacion .btn-pre{
+  color: rgb(255, 255, 255); 
+} 
+
+.content-presentacion .btn-presentacion .btn-pre:hover{
+  background-color: rgb(223 19 19);
 }
