--- a/ImpFront/src/index.css
+++ b/ImpFront/src/index.css
@@ -12,7 +12,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(5, 10, 24, 0.623);
+  background-color: rgba(5, 10, 24, 0.300);
   
   font-size: 20px;
   /* padding: 10px; */
@@ -55,8 +55,8 @@ body{
 }
 
 .btn-login:hover {
-  background-color: rgb(206, 21, 21);
-  color: black;
+  background-color: #7e2b1f;
+  color: rgb(252, 252, 252);
 }
 
 .content-header{
@@ -111,38 +111,44 @@ body{
 }
 
 .content-presentacion .btn-presentacion{
-  background-color: rgb(147 14 14);
+  background-color: #0C1722;
+  border: 1px solid white;
+  color: white;
   border-radius: 50px;
-  padding: 5px 10px;
+  padding: 5px 20px;
   cursor: pointer;
   font-size: 20px;
   text-decoration: none; 
+  height: 50px;
 }
 
 .content-presentacion .btn-presentacion:hover{
-  background-color: rgb(223 19 19);
+  background-color: #316291;
+  box-shadow: 1px 2px 12px -3px rgba(3, 11, 59, 0.75);
 }
 
 
-.content-presentacion .btn-presentacion .btn-pre{
+/* .content-presentacion .btn-presentacion .btn-pre{
   color: rgb(255, 255, 255); 
-} 
+}  */
 
 .content-presentacion .btn-presentacion .btn-pre:hover{
-  background-color: rgb(223 19 19);
+  background-color: #316291;
+
 }
 
 .home-contenido{
   display: flex;
   margin-top: 35px;
-  background-color: #7e2b1f;
+  background-color: #0C1722;
   box-shadow: 1px 2px 12px -3px rgba(0,0,0,0.75);
 }
 .home-contenido .content-imgh{
   margin-left: 20px;
   background-color: #7e2b1f;
-  border-radius: 40%;
-  margin-top: 50px
+  border-radius: 50%;
+  margin-top: 50px;
+  margin-bottom: 15px
 }
 
 .home-contenido .content-p{
@@ -178,6 +184,11 @@ body{
   justify-content: center;
   margin-left: 20px;
   gap: 30px;
+  transition: opacity 0.6s ease;;
+}
+
+.section-home .content-card:hover > :not(:hover){
+  opacity:0.5;
 }
 
 
@@ -189,9 +200,10 @@ body{
   width: 350px; /* Ancho de la tarjeta */
 }
 
-.section-home .card:hover{
-  box-shadow: 10px 9px 7px -6px rgba(126,43,31,1);
-}
+/* .section-home .card:hover > :not(:hover){
+  /* opacity:0.4; */
+  /* box-shadow: 10px 9px 7px -6px rgba(126,43,31,1); */
+
 
 .section-home .card-img{
   width: 100%;
@@ -217,4 +229,51 @@ body{
   font-size: 16px;
   color: #666;
   margin-bottom: 16px;
+}
+
+.btn-vProductos{
+  background-color: #7e2b1f;
+  border: 1px solid white;
+  color: white;
+  border-radius: 50px;
+  padding: 5px 20px;
+  cursor: pointer;
+  font-size: 20px;
+  text-decoration: none; 
+  height: 50px;
+  margin-bottom: 50px;
+}
+
+.btn-vProductos:hover{
+  background-color: #D21414;
+}
+
+.home-parte3{
+  background-color: #7e2b1f;
+  height: 600px;
+  font-size: 20px;
+  color: white;
+  padding-top: 20px;
+}
+
+.conten-home3{
+  display: flex;
+  align-items: center;
+}
+
+.content-p3{
+width: 70%;
+margin-left: 20%;
+margin-right: 60px;
+
+}
+
+.parrafo-home3{
+  color: rgb(255, 255, 255);
+  margin: 30px; 
+  font-size: 20px;
+}
+
+.content-imgh3{
+  margin-right: 20%;
 }
