--- a/ImpFront/src/index.css
+++ b/ImpFront/src/index.css
@@ -184,7 +184,7 @@ body{
   justify-content: center;
   margin-left: 20px;
   gap: 30px;
-  transition: opacity 0.6s ease;;
+  transition: opacity 0.6s ease;
 }
 
 .section-home .content-card:hover > :not(:hover){
@@ -379,3 +379,32 @@ border-radius: 10px;
 .logo-footer:hover {
   background-position: 0% 100%;
 }
+
+
+.content-compraExitosa {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20vh; 
+}
+
+.content-mensaje {
+  background-color: #f0f8ff; 
+  padding: 20px;
+  border: 2px solid #172F44; 
+  border-radius: 10px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  text-align: center; 
+}
+
+.content-mensaje h2 {
+  margin: 0;
+  margin-bottom: 10px;
+  color: #316291; 
+}
+
+.content-mensaje p {
+  margin: 0;
+  color: #555;
+}
+
